...
    <string name="register">Register</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>

    <!-- Email Field Errors -->
    <string name="enterEmail">Please enter an email</string>
    <string name="invalidEmailError">Entered Email is Invalid</string>
    <string name="emailOrPasswordError">Email Address or Password is Incorrect</string>

    <!-- Password Enter Errors -->
    <string name="enterPassword">Please enter a password</string>
    <string name="passwordNoCapitals">Password should contain at least one uppercase character</string>
    <string name="passwordNoLowercase">Password should contain at least on lowercase character</string>
...
    <string name="passwordLength">Password should be 10 characters long</string>
    <string name="passwordWhitespace">Password should not contain whitespace</string>
    <string name="passwordBlank">Password cannot be blank</string>
    <string name="passwordDoNotMatch">Passwords do not match</string>

    <!-- Profile -->
    <string name="save">Save</string>

    <!-- Name Errors -->
    <string name="noNameProvided">Please enter a name</string>

    <!-- Phone Number Errors -->
    <string name="invalidPhoneNumb">Please enter a valid phone number</string>


    <string name="dobError">Please Enter a Valid Date</string>
    <string name="timeError">Please Enter a Valid Time</string>

    <!-- Shift -->
...
